--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,58 @@ span{
   font-style: italic;
   font-weight: bolder;
 }
+.incremento{
+  font-weight: bolder;
+  font-style: italic;
+}
+
+
+.logo-home{
+  margin-top: 25%;
+ 
+margin-left: 20%;
+  width: 60%;
+ 
+}
+
+.myButton {
+  margin: 2%;
+	background-color:#44c767;
+	border-radius:28px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:2rem;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+}
+.myButton:hover {
+	background-color:#5cbf2a;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+
+.home-container{
+  display: flex;
+  flex-direction: column;
+}
+
+.title-restaurant{
+  text-align: center;
+ width: 80%;
+ margin-left: 10%;
+  display: flex;
+  flex-direction: column;
+  font-weight: bolder;
+  font-size: 1rem;
+  padding: -5%;
+ 
+}
+.slide-top{-webkit-animation:slide-top .5s cubic-bezier(.25,.46,.45,.94) both;animation:slide-top .5s cubic-bezier(.25,.46,.45,.94) both}
+
+@-webkit-keyframes slide-top{0%{-webkit-transform:translateY(0);transform:translateY(0)}100%{-webkit-transform:translateY(-100px);transform:translateY(-100px)}}@keyframes slide-top{0%{-webkit-transform:translateY(0);transform:translateY(0)}100%{-webkit-transform:translateY(-100px);transform:translateY(-100px)}}
