--- a/src/App.css
+++ b/src/App.css
@@ -63,10 +63,11 @@ span{
 
 
 .logo-home{
-  margin-top: 25%;
  
-margin-left: 20%;
+ 
   width: 60%;
+  margin-top: -10%;
+  margin-bottom: -20%;
  
 }
 
@@ -108,6 +109,21 @@ margin-left: 20%;
   padding: -5%;
  
 }
+
+.title-home{
+  text-align: center;
+font-size: 2rem;
+font-weight:1000
+}
+
+h6{
+  margin-top: -8%;
+}
+
+.p-title{
+  margin-bottom: -9%;
+}
+ 
 .slide-top{-webkit-animation:slide-top .5s cubic-bezier(.25,.46,.45,.94) both;animation:slide-top .5s cubic-bezier(.25,.46,.45,.94) both}
 
 @-webkit-keyframes slide-top{0%{-webkit-transform:translateY(0);transform:translateY(0)}100%{-webkit-transform:translateY(-100px);transform:translateY(-100px)}}@keyframes slide-top{0%{-webkit-transform:translateY(0);transform:translateY(0)}100%{-webkit-transform:translateY(-100px);transform:translateY(-100px)}}
